--- a/RTMobile/RTMobile/issues/event/CreateIssue.xaml
+++ b/RTMobile/RTMobile/issues/event/CreateIssue.xaml
@@ -18,9 +18,9 @@
                     </Grid.RowDefinitions>
                     <StackLayout x:Name="generalStackLayout"  HorizontalOptions="FillAndExpand"  Margin="20,10,20,0" Grid.Row ="0">
                         <Label Text="Проект:"  FontSize="18" TextColor="#F0F1F0" />
-                        <Picker x:Name="projectPic" SelectedIndexChanged="Picker_SelectedIndexChanged" HorizontalOptions="FillAndExpand" VerticalOptions="Start"  FontSize="18" TextColor="#F0F1F0"/>
+                        <Picker x:Name="projectPic" SelectedIndexChanged="Picker_SelectedIndexChanged" HorizontalOptions="FillAndExpand" VerticalOptions="Start" TitleColor="#F0F1F0" Title="Выберите проект" FontSize="18" TextColor="#F0F1F0"/>
                         <Label x:Name="lblTypeIssue" Text="Тип задач" IsVisible="False"  FontSize="18" TextColor="#F0F1F0"/>
-                        <Picker x:Name="typeIssuePic" IsVisible="False" HorizontalOptions="FillAndExpand" FontSize="18" TextColor="#F0F1F0" SelectedIndexChanged="typeIssuePic_SelectedIndexChanged"/>
+                        <Picker x:Name="typeIssuePic" IsVisible="False" HorizontalOptions="FillAndExpand" FontSize="18" TextColor="#F0F1F0" SelectedIndexChanged="typeIssuePic_SelectedIndexChanged"  TitleColor="#F0F1F0" Title="Выберите тип задачи"/>
                     </StackLayout>
                     <BoxView HeightRequest="1" BackgroundColor="#F0F1F0" Grid.Row="1" IsVisible="False" x:Name="delimiter" HorizontalOptions="FillAndExpand"/>
                     <Button x:Name="extended_button" Text="Показать необязательные поля" Clicked="button_show_necessarily" VerticalOptions ="StartAndExpand"  Grid.Row ="2" BackgroundColor="Transparent"
