--- a/RTMobile/RTMobile/about/About.xaml
+++ b/RTMobile/RTMobile/about/About.xaml
@@ -8,8 +8,6 @@
                      VerticalOptions="FillAndExpand">
             <ScrollView>
                 <StackLayout>
-
-
                     <Frame CornerRadius="50" IsClippedToBounds="True" Margin="0,20,0,0" 
                            HorizontalOptions="Center" VerticalOptions="Start"  
                            HasShadow="True" BackgroundColor="Transparent" Padding="0" x:Name="frameLogo">
@@ -26,23 +24,36 @@
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="40"/>
                         </Grid.ColumnDefinitions>
-                        <Button Text="Обратная связь" Grid.Row="0" Grid.Column="0"
-                                VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
-                                TextColor="#F0F1F0" BackgroundColor="Transparent" Clicked="Feedback_clicked"/>
-                        <Image x:Name="arroW" Source="arrowDown.png" Grid.Row="0" Grid.Column="1" HorizontalOptions="End" Margin="0,0,10,0" WidthRequest="20">
+                        <Grid  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,20,0,0" IsVisible="false" x:Name="autors">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="auto"/>
+                            </Grid.RowDefinitions>
+                            <Label Grid.Row="0" Text="Ведущий разработчик: Секисов В.А. (Black Smile)" TextColor="#F0F1F0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+                            <Label  Grid.Row="1"  Text="Разработчик: Коточигов А.В." TextColor="#F0F1F0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+                            <Label  Grid.Row="2" Text="Тестировщик: Ситнов А.О. (dev4lex)" TextColor="#F0F1F0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+                            <BoxView  Grid.Row="3" BackgroundColor="#9B9CA0" HeightRequest="1"  HorizontalOptions="FillAndExpand"/>
+                        </Grid>
+                        <Button Text="Обратная связь" Grid.Row="1" Grid.Column="0" 
+                                VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" 
+                                TextColor="#F0F1F0" Clicked="Feedback_clicked" BackgroundColor="Transparent"/>
+                        <Image x:Name="arroW" Source="arrowDown.png" Grid.Row="1" Grid.Column="1" HorizontalOptions="End" Margin="0,0,10,0" WidthRequest="20">
                             <Image.GestureRecognizers>
                                 <TapGestureRecognizer Tapped="Feedback_clicked"/>
                             </Image.GestureRecognizers>
                         </Image>
                         <BoxView BackgroundColor="#9B9CA0" HeightRequest="1"
                                  HorizontalOptions="FillAndExpand"
-                                 Grid.Row="1" Grid.ColumnSpan="2"/>
-                        <Frame BackgroundColor="Transparent" CornerRadius="5" HorizontalOptions="FillAndExpand" Grid.Row="2" Grid.Column="0" IsVisible="false" Grid.ColumnSpan="2" x:Name="fb">                            
+                                 Grid.Row="2" Grid.ColumnSpan="2"/>
+                        <Frame BackgroundColor="Transparent" CornerRadius="5" HorizontalOptions="FillAndExpand" Grid.Row="3" Grid.Column="0" IsVisible="false" Grid.ColumnSpan="2" x:Name="fb">
                             <ScrollView>
                                 <StackLayout x:Name="FeedbackForm" HorizontalOptions="FillAndExpand">
 
@@ -52,24 +63,28 @@
                                     <Label Text="Сообщение:" Margin="3,10,10,0" TextColor="White" FontSize="18" />
                                     <Editor x:Name ="FBBody" Placeholder="Введите текст" PlaceholderColor="White" FontSize="18" AutoSize="TextChanges" TextColor="White" MaxLength="500" HorizontalOptions="FillAndExpand"/>
 
-                                    <Button Clicked="FeedbacSender_clicked" BackgroundColor="#BE0030"  Text ="Отправить" TextColor="White" Margin="10,10,10,10" FontSize="18" CornerRadius="5" />                                    
+                                    <Button Clicked="FeedbacSender_clicked" BackgroundColor="#BE0030"  Text ="Отправить" TextColor="White" Margin="10,10,10,10" FontSize="18" CornerRadius="5" />
                                 </StackLayout>
                             </ScrollView>
                         </Frame>
                         <BoxView BackgroundColor="#9B9CA0" HeightRequest="1"
                                  HorizontalOptions="FillAndExpand" x:Name="boxViewSeparator"
-                                 Grid.Row="3" Grid.ColumnSpan="2" IsVisible="false"/>
-                        <Button Text="Оценить приложение" Grid.Row="4" Grid.Column="0"
-                        TextColor="#F0F1F0"  HorizontalOptions="FillAndExpand"
-                        VerticalOptions="FillAndExpand" BackgroundColor="Transparent"/>
+                                 Grid.Row="4" Grid.ColumnSpan="2" IsVisible="false" Margin="0"/>
+                        <Button Text="Оценить приложение" Grid.Row="4" Grid.Column="0" Padding="0"
+                                TextColor="#F0F1F0"  HorizontalOptions="FillAndExpand"
+                                VerticalOptions="StartAndExpand" BackgroundColor="Transparent"/>
                         <Image Source="arrowDown.png" Grid.Row="4" Grid.Column="1" HorizontalOptions="End" Margin="0,0,10,0" WidthRequest="20"/>
                     </Grid>
-            
+
                 </StackLayout>
 
             </ScrollView>
-                
-         
+            <StackLayout>
+                <Button Text="GPS" Clicked="Button_Clicked"/>
+                <Label x:Name="Latitude"/>
+                <Label x:Name="Longitude"/>
+            </StackLayout>
+
 
             <Grid VerticalOptions="EndAndExpand">
                 <Grid.RowDefinitions>
