--- a/RTMobile/RTMobile/issues/viewIssue/General.xaml
+++ b/RTMobile/RTMobile/issues/viewIssue/General.xaml
@@ -25,7 +25,8 @@
     <ContentPage.Content>
         <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
                       BackgroundColor="#4A4C50">
-
+            <ScrollView VerticalOptions="FillAndExpand">
+                <StackLayout>
             <Frame Grid.Row="0" Grid.Column="0" HasShadow="True" CornerRadius="5"
                    x:Name="detailFrame" BackgroundColor="#FFFFFF" HeightRequest="150" Margin="10,20,10,10" Padding="10,0,10,0">
                 <Grid>
@@ -200,6 +201,8 @@
                 <ImageButton Source="filter.png" Grid.Column="3" Grid.Row="1"
                              BackgroundColor="Transparent" Clicked="ImageButton_Clicked_2"></ImageButton>
             </Grid>
+                </StackLayout>
+            </ScrollView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
