--- a/RTMobile/RTMobile/issues/viewIssue/Comment.xaml
+++ b/RTMobile/RTMobile/issues/viewIssue/Comment.xaml
@@ -11,6 +11,10 @@
                      Order="Secondary" Priority="998"/>
         <ToolbarItem Text="История" Clicked="ToolbarItem_Clicked"
                      Order="Secondary" Priority="1000"/>
+        <ToolbarItem Text="   _________________   " 
+                     Order="Secondary" Priority="1001"/>
+        <ToolbarItem Text="Поделиться" Clicked="SendIssueClicked"
+                     Order="Secondary" Priority="1002"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
@@ -24,7 +28,7 @@
            
             <ListView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" x:Name="listComment"
                       BackgroundColor="#4A4C50" HasUnevenRows="True" SeparatorVisibility="None"
-                      ItemsSource="{Binding comments}" ItemTapped="ListView_ItemTapped">
+                      ItemsSource="{Binding comments}" ItemTapped="ListView_ItemTapped" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
@@ -40,56 +44,39 @@
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto"/>
                                                 <RowDefinition Height="Auto"/>
-                                                <RowDefinition Height="25"/>
                                             </Grid.RowDefinitions>
                                             <Grid Padding="10,5,5,5" Margin="0" Grid.Row="0">
                                                 <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="50"/>
-                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="40"/>
+                                                    <ColumnDefinition Width="Auto"/>
                                                 </Grid.ColumnDefinitions>
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="35"/>
-                                                    <RowDefinition Height="30"/>
-                                                    <RowDefinition Height="1"/>
+                                                    <RowDefinition Height="Auto"/>
                                                 </Grid.RowDefinitions>
                                                 <Frame Margin="0, 10, 0, 10" 
                                                        CornerRadius="50" IsClippedToBounds="True"
                                                        HorizontalOptions="Start" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Start"
                                                        HasShadow="True" OutlineColor="Black" BackgroundColor="#FFFFFF">
-                                                       <Image Source ="{Binding author.AvatarUrls.image}" Aspect="Fill" HeightRequest="50" WidthRequest="50" Margin="-20"/>
+                                                       <Image Source ="{Binding author.AvatarUrls.image}" Aspect="Fill" HeightRequest="35" WidthRequest="35" Margin="-20"/>
                                                        <Frame.GestureRecognizers>
                                                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                                                        </Frame.GestureRecognizers>
                                                 </Frame>
 
                                                 <Label Grid.Column="1" Grid.Row="0" Text="{Binding Path=author.displayName}"
-                                                   FontSize="12" TextColor="#4A4C50" VerticalOptions="End"/>
-                                                <StackLayout Orientation="Horizontal" Grid.Column="1" Grid.Row="1" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
-                                                    <Label  Text="{Binding Path=created}"
-                                                           FontSize="12" TextColor="#4A4C50" VerticalOptions="StartAndExpand"/>
-                                                    <!--<Frame CornerRadius="5" BackgroundColor="#F0F1F0" HorizontalOptions="EndAndExpand" BorderColor="#4A4C50"
-                                                           Padding="5,0,5,0" >
-                                                        <Label HorizontalOptions="Start" VerticalOptions="Start" Margin="0" FontSize="12" Text="Авт."/>
-                                                    </Frame>
-                                                    <Frame CornerRadius="5" BackgroundColor="#F0F1F0" HorizontalOptions="End" BorderColor="#4A4C50"
-                                                           Padding="5,0,5,0" Margin="5,0,5,0" HeightRequest="5">
-                                                        <Label HorizontalOptions="Start" VerticalOptions="Center" Margin="0" FontSize="12" Text="Внешн."/>
-                                                    </Frame>-->
-                                                </StackLayout>
-                                                <BoxView BackgroundColor="#4A4C50" HeightRequest="1" 
-                                                 HorizontalOptions="FillAndExpand" Grid.Column="0" Margin="-5,0,0,0"
-                                                 Grid.Row="2" Grid.ColumnSpan="2" VerticalOptions="Start"/>
+                                                   FontSize="14" TextColor="#4A4C50" VerticalOptions="End"/>                                               
                                             </Grid>
                                             <ScrollView Margin="10,0,10,0" VerticalOptions="StartAndExpand"
                                                   HorizontalOptions="FillAndExpand" Grid.Column="0" Grid.Row="1" Padding="0" >
                                                 <Label VerticalOptions="Start" HorizontalOptions="Start" Text="{Binding Path=body}"
-                                                       Grid.Column="0" Grid.Row="0"/>
-
+                                                       Grid.Column="0" Grid.Row="0" TextColor="#000000"/>
+                                                
                                             </ScrollView>
-                                            <ImageButton x:Name="showHistory" Source="arrowUp.png"  Grid.Column="0"
-                                                         BackgroundColor="Transparent"
-                                                         Grid.Row="2" HorizontalOptions="Center" VerticalOptions="End"
-                                                         Margin="0,0,0,10" Clicked="showHistory_Clicked"/>
+                                            <StackLayout Orientation="Horizontal" Grid.Column="0" Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="Start" Margin="10,10,0,10">
+                                                <Label  Text="{Binding Path=created}"
+                                                           FontSize="12" TextColor="#4A4C50" VerticalOptions="Start"/>
+                                            </StackLayout>
                                         </Grid>
                                     </Frame>
                                 </Grid>
