--- a/RTMobile/RTMobile/issues/viewIssue/WorkJournal.xaml
+++ b/RTMobile/RTMobile/issues/viewIssue/WorkJournal.xaml
@@ -13,7 +13,11 @@
         <ToolbarItem Text="Комментарии" Icon="comment.png"  Clicked="ToolbarItem_Clicked_2"
                      Order="Secondary" Priority="999"/>
         <ToolbarItem Text="История" Clicked="ToolbarItem_Clicked"
-                     Order="Secondary" Priority="1000"/>       
+                     Order="Secondary" Priority="1000"/>
+        <ToolbarItem Text="   _________________   " 
+                     Order="Secondary" Priority="1001"/>
+        <ToolbarItem Text="Поделиться" Clicked="SendIssueClicked"
+                     Order="Secondary" Priority="1002"/>
 
     </ContentPage.ToolbarItems>
 
