--- a/RTMobile/RTMobile/insight/CommentInsight.xaml
+++ b/RTMobile/RTMobile/insight/CommentInsight.xaml
@@ -1,31 +1,20 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RTMobile.issues.viewIssue.Comment"
-             Title="КОММЕНТАРИИ">
-   
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="   _________________   " 
-                     Order="Secondary" Priority="997"/>
-        <ToolbarItem Text="Рабочий журнал" Clicked="ToolbarItem_Clicked_1"
-                     Order="Secondary" Priority="998"/>
-        <ToolbarItem Text="История" Clicked="ToolbarItem_Clicked"
-                     Order="Secondary" Priority="1000"/>
-        <ToolbarItem Text="   _________________   " 
-                     Order="Secondary" Priority="1001"/>
-        <ToolbarItem Text="Поделиться" Clicked="SendIssueClicked"
-                     Order="Secondary" Priority="1002"/>
-    </ContentPage.ToolbarItems>
-
+             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             Title="КОММЕНТАРИИ"
+             x:Class="RTMobile.insight.CommentInsight">
     <ContentPage.Content>
         <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
                       BackgroundColor="#4A4C50">
             <StackLayout HeightRequest="70" BackgroundColor="#323037">
-                <Label Text="{Binding Path=issueSummary}"
+                <Label Text="{Binding InsightSummary}"
                        TextColor="#F0F1F0" FontSize="16" VerticalOptions="CenterAndExpand"
                        HorizontalOptions="CenterAndExpand" Margin="10,0,10,0" MaxLines="2" LineBreakMode="TailTruncation"/>
             </StackLayout>
-           
+
             <ListView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" x:Name="listComment"
                       BackgroundColor="#4A4C50" HasUnevenRows="True" SeparatorVisibility="None"
                       ItemsSource="{Binding comments}" ItemTapped="ListView_ItemTapped" >
@@ -58,20 +47,20 @@
                                                        CornerRadius="50" IsClippedToBounds="True"
                                                        HorizontalOptions="Start" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Start"
                                                        HasShadow="True" OutlineColor="Black" BackgroundColor="#FFFFFF">
-                                                       <Image Source ="{Binding author.AvatarUrls.image}" Aspect="Fill" HeightRequest="35" WidthRequest="35" Margin="-20"/>
-                                                       <Frame.GestureRecognizers>
-                                                            <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
-                                                       </Frame.GestureRecognizers>
+                                                    <Image Source ="{Binding actor.AvatarUrls.image}" Aspect="Fill" HeightRequest="35" WidthRequest="35" Margin="-20"/>
+                                                    <Frame.GestureRecognizers>
+                                                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                                                    </Frame.GestureRecognizers>
                                                 </Frame>
 
-                                                <Label Grid.Column="1" Grid.Row="0" Text="{Binding Path=author.displayName}"
-                                                   FontSize="14" TextColor="#4A4C50" VerticalOptions="End"/>                                               
+                                                <Label Grid.Column="1" Grid.Row="0" Text="{Binding Path=actor.displayName}"
+                                                   FontSize="14" TextColor="#4A4C50" VerticalOptions="End"/>
                                             </Grid>
                                             <ScrollView Margin="10,0,10,0" VerticalOptions="StartAndExpand"
                                                   HorizontalOptions="FillAndExpand" Grid.Column="0" Grid.Row="1" Padding="0" >
-                                                <Label VerticalOptions="Start" HorizontalOptions="Start" Text="{Binding Path=body}"
+                                                <Label VerticalOptions="Start" HorizontalOptions="Start" Text="{Binding Path=comment}"
                                                        Grid.Column="0" Grid.Row="0" TextColor="#000000"/>
-                                                
+
                                             </ScrollView>
                                             <StackLayout Orientation="Horizontal" Grid.Column="0" Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="Start" Margin="10,10,0,10">
                                                 <Label  Text="{Binding Path=created}"
@@ -99,7 +88,7 @@
                         <ImageButton BackgroundColor="Transparent" Grid.Column="0" Grid.Row="0" Source="attachment.png" HorizontalOptions="Start" HeightRequest="25" Margin="5,0,0,0"/>
                         <Entry x:Name="newComment" Grid.Column="1" Grid.Row="0" Placeholder="Введите текст комментария..." FontSize="14" Margin="-5,0,0,0"
                                PlaceholderColor="#4A4C50" TextColor="#4A4C50" HeightRequest="60" HorizontalOptions="FillAndExpand"/>
-                         <ImageButton BackgroundColor="Transparent" Grid.Column="2" Grid.Row="0" Source="arrowRightDark.png" HeightRequest="15" 
+                        <ImageButton BackgroundColor="Transparent" Grid.Column="2" Grid.Row="0" Source="arrowRightDark.png" HeightRequest="15" 
                                       HorizontalOptions="End" Margin="0,0,10,0" Clicked="ImageButton_Clicked_4"/>
                     </Grid>
                 </Frame>
