--- a/RTMobile/RTMobile/Views/Issues/EventIssue/CreateIssue.xaml
+++ b/RTMobile/RTMobile/Views/Issues/EventIssue/CreateIssue.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:forms ="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              x:Class="RTMobile.issues.CreateIssue"
              Title="СОЗДАТЬ ЗАДАЧУ">
     <ContentPage.Content>
